@@ -28,6 +28,12 @@
       <tr><td>
 	  <a href="DecorDemo4.fvwmrc"><img src="DecorDemo4.gif"
 	      alt="Collection 4" align=left></a></td></tr>
+      <tr><td>
+This next one uses the pixel offset feature from the fvwm 2.5.x beta series.
+Be patient now...
+      <tr><td>
+	  <a href="DecorDemo5.fvwmrc"><img src="DecorDemo5.gif"
+	      alt="Collection 5" align=left></a></td></tr>
     </table>
     If you have a vector button that you would like to contribute
     you can mail it to fvwm-workers@fvwm.org.
@@ -37,6 +43,6 @@
       buttons.  You can get it
       <A HREF="http://www.xs4all.nl/~josvanr/eps2vector.pl">HERE</A>.
     <hr>
-    Created: November 22, 1999 ----- Last Updated: January 20, 2001.
+    Created: November 22, 1999 ----- Last Updated: November 9, 2002.
   </body>
 </html>
