@@ -1,3 +1,7 @@
+2002-11-09  Dan Espen  <dane@mk.telcordia.com>
+
+	* vector-buttons/vector-buttons.html: Added some vector buttons.
+
 2002-11-01  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* index.html:
